--- a/index.html
+++ b/index.html
@@ -913,61 +913,6 @@ Bank Transfer and other options available on request." style="float:right;"><img
                         Managers will be available round the clock to help you out with your campaigns.
                     </div>
                 </div>
-<!--
-                <div class="media text-right feature">
-                    <a class="right pull-right">
-                        <i class="fa fa-calendar fa-2x"></i>
-                    </a>
-                    <div class="media-body">
-                        <h3 class="media-heading">Review Planner</h3>
-                        Control the amount of reviews posted in a month or in a day
-                    </div>
-                </div>
--->
-            </div>
-            <div class="col-md-4 col-sm-4 hidden-xs">
-                <img src="images/iphone-freeze.png" class="img-responsive scrollpoint sp-effect5" alt="">
-            </div>
-            <div class="col-md-4 col-sm-4 scrollpoint sp-effect2 space">
-                <div class="media feature">
-                    <a class="pull-left">
-                        <i class="fa fa-map-marker fa-2x"></i>
-                    </a>
-                    <div class="media-body">
-                        <h3 class="media-heading">Geographically Scattered</h3>
-                        Unique IP's, Unique Mobile Devices, Unique Device'ID's, IMEI and many more
-                    </div>
-                </div>
-                <div class="media feature">
-                    <a class="pull-left">
-                        <i class="fa fa-clipboard fa-2x"></i>
-                    </a>
-                    <div class="media-body">
-                        <h3 class="media-heading">In-depth Reporting</h3>
-                        In-depth details such as email-id, device details, Google Tokens is icing on the cake
-                    </div>
-                </div>
-                <div class="media feature">
-                    <a class="pull-left">
-                        <i class="fa fa-search fa-2x"></i>
-                    </a>
-                    <div class="media-body">
-                        <h3 class="media-heading">Intuitive Statistics</h3>
-                        Get statistics like retention rate, app engagement, Play Store Rankings, daily organic reviews
-                        data and much more.
-                    </div>
-                </div>
-                <div class="media feature">
-                    <a class="pull-left">
-                        <i class="fa fa-picture-o fa-2x"></i>
-                    </a>
-                    <div class="media-body">
-                        <h3 class="media-heading">iOS reviews from geniune users</h3>
-                        Our company is the largest provider of iOS app reviews and we will be glad to do
-                        it for you too!
-                    </div>
-                </div>
-
             </div>
         </div>
     </div>
@@ -1037,15 +982,15 @@ Bank Transfer and other options available on request." style="float:right;"><img
                             <div class="col-md-2">
                                 <div class="review-person">
                                     <!--<img src="assets/img/freeze/Debnath.jpg" alt="" class="img-responsive">-->
-                                    <img src="images/person1.jpg" alt="" class="img-responsive">
+                                    <img src="images/person3.jpg" alt="" class="img-responsive">
 
                                 </div>
                             </div>
                             <div class="col-md-10">
                                 <div class="review-comment">
-                                    <h3>“My company has had a very noticeable positive growth in organic traffic and rankings since they were brought on board. The team that has been assigned my App continues to demonstrate great communication and knowledge regarding not only reviews, but also on and off-site ASO practices as well.”</h3>
+                                    <h3>“waste of money.”</h3>
                                     <p>
-                                        - Mark Sales
+                                        - chutiya
                                         <span>
                                                     <i class="fa fa-star fa-lg"></i>
                                                     <i class="fa fa-star fa-lg"></i>
