--- a/index.html
+++ b/index.html
@@ -124,17 +124,11 @@
                         <img src="images/hand-freeze.png" alt="" style="width: 499px; height: 600px;">
                     </div>
 
-                    <div class="tp-caption large_white_bold sft" data-x="550" data-y="center" data-hoffset="0" data-voffset="-80" data-speed="500" data-start="1200" data-easing="Power4.easeOut">
-                        MySocialCare
+                    
+<div class="tp-caption large_white_light sft" data-x="center" data-y="200" data-hoffset="0" data-voffset="0" data-speed="1000" data-start="1400" data-easing="Power4.easeOut">
+                        <p style="text-align: center;"MySocialCare"</i><br>
+                            Buy Mobile App Reviews.</p>
                     </div>
-                    <div class="tp-caption large_white_light sfr" data-x="770" data-y="center" data-hoffset="0" data-voffset="-80" data-speed="500" data-start="1400" data-easing="Power4.easeOut">
-
-                    </div>
-                    <div class="tp-caption large_white_light sfb" data-x="550" data-y="center" data-hoffset="0" data-voffset="0" data-speed="1000" data-start="1500" data-easing="Power4.easeOut">
-                        Buy Mobile App Reviews
-                    </div>
-
-
                     <div class="tp-caption sfr hidden-xs" data-x="550" data-y="center" data-hoffset="0" data-voffset="85" data-speed="1000" data-start="1700" data-easing="Power4.easeOut">
                         <a href="#pricing" class="btn main-btn">Order Now</a>
                     </div>
