some more changes by @rajkale99

--- a/index.html
+++ b/index.html
@@ -928,7 +928,7 @@ Bank Transfer and other options available on request." style="float:right;"><img
                             </div>
                             <div class="col-md-10">
                                 <div class="review-comment">
-                                    <h3>"Once I tried this service , but after I feel the effect towards my app ,  I used it for daily basis , our ranking was so down,  I was thinking what to do and that time I came to know about my social care ,  they helps me to achieve what I wanted.  Big thumbs up :+1: for my social care."</h3>
+                                    <h3>"Once I tried this service , but after I feel the effect towards my app ,  I used it for daily basis , our ranking was so down,  I was thinking what to do and that time I came to know about my social care ,  they helps me to achieve what I wanted.  Big thumbs up :+1: for my social care."</h3>t
                                     <p>
                                         - Stephen Robert
                                         <span>
@@ -978,9 +978,9 @@ Bank Transfer and other options available on request." style="float:right;"><img
                             </div>
                             <div class="col-md-10">
                                 <div class="review-comment">
-                                    <h3>“waste of money.”</h3>
+                                    <h3>"This Company has been a fantastic asset to our app marketing.Over a few years of poorly mamages ASO , theyvwere able to come on bold and turn our app ranking around ,Great reporting process,amd contact from our campaign manager . We wil continue to use their services and buy android reviews for years to come”</h3>
                                     <p>
-                                        - chutiya
+                                        - Alaxander Robert
                                         <span>
                                                     <i class="fa fa-star fa-lg"></i>
                                                     <i class="fa fa-star fa-lg"></i>
@@ -1164,8 +1164,8 @@ Bank Transfer and other options available on request." style="float:right;"><img
     <div class="container">
 
         <div class="rights">
-            <p>Email: kthckrd.p02@gmail.com</p>
-            <p>Skype: live;tackrd.p01</p>
+            <p>Email: thckrd.p02@gmail.com</p>
+            <p>Skype: live:tackrd.p01</p>
             <p>Phone: +91 9016368141</p>
 
         </div>
