update button alternate @rajkale99

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ Bank Transfer and other options available on request." class="infobtngrowth"><fo
                             <li class="plan-action">
 
 <a href="https://form.jotform.me/90956960419469" class="btn" btn-default">Buy</a>
-                                <a type="button" class="pop-data" data-toggle="popover" data-content="Delivery time: 24 Hours
+                                <a type="button" class="pop-data" data-toggle="popover" data-content="Delivery time: 48 Hours
 Email: thckrd.p02@gmail.com for any support
 Bank Transfer and other options available on request." style="float:right;"><img src="fonts/info.svg" alt="info icon" width="20px" height="20px" style="float:right;"></a>
 
@@ -359,7 +359,7 @@ Bank Transfer and other options available on request." class="infobutton"><font 
                                 <strong>500 reviews</strong>
                             </li>
                             <li>
-                                <strong>1500 installs</strong>
+                                <strong>1500 installs</strong>|
                             </li>
                             <li>
                                 <strong>Keyword is required</strong>
@@ -370,7 +370,7 @@ Bank Transfer and other options available on request." class="infobutton"><font 
 
 <a href="https://form.jotform.me/90956914058467" class="btn" btn-default">Buy</a>
 
-                       <a type="button" class="pop-data" data-toggle="popover" data-content="Delivery time: 24 Hours
+                       <a type="button" class="pop-data" data-toggle="popover" data-content="Delivery time: 6 Days
 Email: thckrd.p02@gmail.com for any support
 Bank Transfer and other options available on request." style="float:right;"><img src="fonts/info.svg" alt="info icon" width="20px" height="20px" style="float:right;"></a>
 
