--- a/index.html
+++ b/index.html
@@ -269,8 +269,9 @@ Bank Transfer and other options available on request.">p</button>
                             </li>
 
                             <li class="plan-action">
-
-				    <a href="https://form.jotform.me/90955879730473" class="btn" btn-default">Buy</a>
+<a href="https://www.instamojo.com/@rajkale99/le2f5e009955e4456984ea65b519242ce/" rel="im-checkout" data-behaviour="remote" data-style="light" data-text="Checkout With Instamojo"></a>
+<script src="https://js.instamojo.com/v1/button.js"></script>
+			
                                 <a type="button" class="pop-data" data-toggle="popover" data-content="Delivery time: 24 Hours
 Email: thckrd.p02@gmail.com for any support
 Bank Transfer and other options available on request." style="float:right;"><img src="fonts/info.svg" alt="info icon" width="20px" height="20px" style="float:right;"></a>
