--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ Bank Transfer and other options available on request.">p</button>
                             </li>
 
                             <li class="plan-action">
-<a href="https://www.instamojo.com/@rajkale99/le2f5e009955e4456984ea65b519242ce/" rel="im-checkout" data-behaviour="remote" data-style="light" data-text="Checkout With Instamojo"></a>
+<a href="https://www.instamojo.com/@rajkale99/le2f5e009955e4456984ea65b519242ce/" rel="im-checkout" data-behaviour="remote" data-style="flat" data-text="BUY"></a>
 <script src="https://js.instamojo.com/v1/button.js"></script>
 			
                                 <a type="button" class="pop-data" data-toggle="popover" data-content="Delivery time: 24 Hours
