--- a/index.html
+++ b/index.html
@@ -305,8 +305,12 @@
 
                 <div class="text-center mt-1-half" id="render-paypal-button">
                       <!---->
-                    <div id="gif-loader">
-                    <img src="images/loading.gif" alt="logo-pic">
+                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="ZC3X95346CYJL">
+<input type="image" src="https://www.paypalobjects.com/en_GB/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online!">
+<img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
+</form>
                         </div>
                    <!--<img src="https://www.paypalobjects.com/webstatic/en_US/i/btn/png/silver-rect-paypalcheckout-44px.png" alt="PayPal Checkout" class="confirm-page-btn-submit">-->
                 </div>
