--- a/index.html
+++ b/index.html
@@ -305,10 +305,23 @@
 
                 <div class="text-center mt-1-half" id="render-paypal-button">
                       <!---->
-                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
 <input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="ZC3X95346CYJL">
-<input type="image" src="https://www.paypalobjects.com/en_GB/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online!">
+<input type="hidden" name="hosted_button_id" value="WM8CRVKDM2PHL">
+<table>
+<tr><td><input type="hidden" name="on0" value="Buy your package">Buy your package</td></tr><tr><td><select name="os0">
+ <option value="Option 1">Option 1 $90.00 USD</option>
+ <option value="Option 2">Option 2 $170.00 USD</option>
+ <option value="Option 3">Option 3 $850.00 USD</option>
+</select> </td></tr>
+<tr><td><input type="hidden" name="on1" value="Select your package">Select your package</td></tr><tr><td><select name="os1">
+ <option value="Base">Base </option>
+ <option value="Growth">Growth </option>
+ <option value="Maxima">Maxima </option>
+</select> </td></tr>
+</table>
+<input type="hidden" name="currency_code" value="USD">
+<input type="image" src="https://www.paypalobjects.com/en_GB/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
 </form>
                         </div>
