paypal form changed
added test payment button

--- a/index.html
+++ b/index.html
@@ -309,18 +309,16 @@
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
 <input type="hidden" name="cmd" value="_s-xclick">
 <input type="hidden" name="hosted_button_id" value="J2HQ34QF7WGX8">
-<center><table class="w3-table-all">
-<tr class="w3-red">
-<td><input type="hidden" name="on0" value="Select Pack">Select Pack</td></tr><tr><td><select name="os0">
+<table>
+<tr><td><input type="hidden" name="on0" value="Select Pack">Select Pack</td></tr><tr><td><select name="os0">
 	<option value="Test">Test $1.00 USD</option>
 	<option value="Base">Base $90.00 USD</option>
 	<option value="Growth">Growth $170.00 USD</option>
 	<option value="Maxima">Maxima $850.00 USD</option>
 </select> </td></tr>
-</table></center>
+</table>
 <input type="hidden" name="currency_code" value="USD">
 <input type="image" src="https://www.paypalobjects.com/en_GB/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online!">
-<br><br>
 <img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
 </form>
 
